# CsI_detector

./: .gitignore  CMakeLists.txt  Readme.md  analyze_data.py  check_root.py  data.ipynb  data_config.json  data_loader.py  main.cc  run_simulations.py
analysis/: optical_hits_analysis.py
include/: ActionInitialization.hh  DetectorConstruction.hh  DetectorSD.hh  EventAction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh  TrackingAction.hh  Trajectory.hh
mac/: grease_test.mac  init_vis.mac  run.mac  vis.mac
src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorSD.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc  TrackingAction.cc  Trajectory.cc  main.cc
